src/components/styles/Landing.css
.landing-section {
  width: 100%;
  max-width: var(--cMaxWidth);
  margin: auto;
  position: relative;
  height: var(--vh);
}
.landing-container {
  width: var(--cWidth);
  margin: auto;
  height: 100%;
  position: relative;
  max-width: var(--cMaxWidth);
}
.landing-circle1 {
  top: 0%;
  left: 0%;
  z-index: 15;
  position: fixed;
  width: 300px;
  height: 300px;
  background-color: #fb8dff;
  box-shadow: inset -50px 40px 50px rgba(84, 0, 255, 0.6);
  filter: blur(60px);
  border-radius: 50%;
  animation: loadingCircle 5s linear infinite;
}
.nav-fade {
  position: fixed;
  top: 0;
  width: 100%;
  height: 130px;
  background-image: linear-gradient(
    0deg,
    transparent,
    var(--backgroundColor) 70%
  );
  pointer-events: none;
  z-index: 12;
  opacity: 0;
  left: 0;
}
@keyframes loadingCircle {
  0% {
    transform: translate(-95%, -75%) rotateZ(0deg);
  }
  100% {
    transform: translate(-95%, -75%) rotateZ(360deg);
  }
}

.landing-circle2 {
  top: 50%;
  right: 0%;
  transform: translate(calc(100% - 2px), -50%);
  z-index: 9;
  position: fixed;
  display: none;
  width: 300px;
  height: 300px;
  background-color: #fb8dff;
  box-shadow: inset -50px 40px 50px rgba(84, 0, 255, 0.6);
  filter: blur(50px);
  border-radius: 50%;
  animation: loadingCircle2 5s linear infinite;
}
@keyframes loadingCircle2 {
  100% {
    transform: translate(calc(100% - 2px), -50%) rotate(360deg);
  }
}
.landing-video,
.landing-image {
  position: absolute;
  bottom: 0;
  height: 95%;
  left: 50%;
  transform: translateX(-50%);
}
.landing-image img {
  height: 100%;
  z-index: 2;
  position: relative;
}
.character-rim {
  position: absolute;
  width: 400px;
  height: 400px;
  z-index: 1;
  background-color: #f59bf8;
  transform: translate(-50%, 36%) scaleX(1.4);
  box-shadow: inset 66px 35px 85px 0px rgba(85, 0, 255, 0.65);
  filter: blur(50px);
  border-radius: 50%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, 100%) scale(1.4);
  opacity: 0;
}
.character-model {
  height: 80%;
  height: 80vh;
  position: absolute;
  max-width: 1920px;
  max-height: 1080px;
  transform: translateX(-50%);
  width: 100%;
  left: 50%;
  z-index: 0;
  bottom: 50px;
  pointer-events: inherit;
}
.character-model::after {
  content: "";
  width: 100vw;
  height: 250px;
  background-image: linear-gradient(
    to bottom,
    transparent,
    var(--backgroundColor) 70%
  );
  bottom: -50px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 9;
  position: absolute;
}
.character-model::before {
  content: "";
  width: 100vw;
  height: 700px;
  background-color: var(--backgroundColor);
  top: 100%;
  left: 50%;
  transform: translateX(-50%);
  z-index: 9;
  position: absolute;
}
.character-loaded .character-rim {
  animation: backlight 3s forwards;
  animation-delay: 0.3s;
  opacity: 0;
}
.character-model canvas {
  position: relative;
  pointer-events: none;
  z-index: 2;
}
.character-hover {
  position: absolute;
  width: 280px;
  height: 280px;
  top: 50%;
  left: 50%;
  z-index: 3;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.landing-intro {
  position: absolute;
  z-index: 9;
  top: 12%;
  left: 0;
}
.landing-intro h2 {
  margin: 0;
  color: var(--accentColor);
  font-size: 22px;
  font-weight: 300;
  letter-spacing: 2px;
}

.landing-intro h1 {
  margin: 0;
  letter-spacing: 2px;
  font-size: 28px;
  line-height: 28px;
  font-weight: 500;
  font-family: "Geist", sans-serif;
}

/* .landing-intro h1 span {
   font-weight: 200; 
} */

.landing-info {
  position: absolute;
  right: 50%;
  transform: translateX(50%);
  bottom: 40px;
  top: inherit;
  z-index: 9;
  width: 90%;
  max-width: 450px;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.landing-info h3 {
  font-size: 14px;
  line-height: 1.6;
  letter-spacing: 1.5px;
  font-weight: 300;
  color: #e5e7eb;
  margin: 0;
  font-family: "Geist", sans-serif;
  text-transform: none;
}
@media screen and (min-width: 500px) {
  .landing-circle2 {
    display: block;
  }
  .character-model {
    z-index: 0;
  }
  .landing-intro h2 {
    font-size: 18px;
  }
  .landing-intro h1 {
    font-size: 30px;
    line-height: 30px;
  }
  .landing-info h3 {
    font-size: 15px;
    line-height: 1.6;
  }
}
@media screen and (min-width: 768px) {
  .character-model {
    height: 80vh;
  }
  .landing-intro h2 {
    font-size: 25px;
  }
  .landing-intro h1 {
    font-size: 40px;
    line-height: 35px;
  }
  .landing-info h3 {
    font-size: 17px;
    line-height: 1.6;
  }
}
@media screen and (min-width: 1025px) {
  .character-model {
    height: 100vh;
    bottom: 0;
    z-index: 11;
    position: fixed;
  }
  .character-model::after,
  .character-model::before {
    display: none;
  }
  .landing-intro {
    top: 50%;
    left: auto;
    right: 66%;
    transform: translate(0%, -50%);
  }

  .landing-info {
    bottom: auto;
    top: 51%;
    z-index: inherit;
    text-align: left;
    transform: translate(0%, -50%);
    right: auto;
    left: 66%;
    width: 32%;
    max-width: 500px;
    align-items: flex-start;
    justify-content: flex-start;
  }
  .landing-info h3 {
    font-size: 1.25vw;
    line-height: 1.6vw;
    letter-spacing: 2px;
  }
}
@media screen and (min-width: 1200px) {
  .landing-intro {
    top: 50%;
    left: auto;
    right: 70%;
    transform: translate(0%, -50%);
  }

  .landing-info {
    bottom: auto;
    top: 51%;
    z-index: inherit;
    text-align: left;
    transform: translate(0%, -50%);
    right: auto;
    left: 70%;
  }
}
@media screen and (min-width: 1600px) {
  .landing-intro h2 {
    font-size: 35px;
  }
  .landing-intro h1 {
    font-size: 60px;
    line-height: 55px;
  }
  .landing-info h3 {
    font-size: 24px;
    line-height: 38px;
  }
}

@media screen and (max-width: 1024px) {
  .character-model {
    height: 45vh;
    max-height: 380px;
    bottom: 0;
  }
  .character-model::after {
    height: 100px;
    bottom: -10px;
  }
}
@media screen and (max-width: 768px) {
  .character-model {
    height: 40vh;
    max-height: 300px;
  }
}
@media screen and (max-width: 375px) {
  .character-model {
    height: 35vh;
    max-height: 250px;
  }
}

